SLW-215 | Fixed text align for news and event page titles.

--- a/themes/custom/c2d_theme/sass/5.components/components.entity.node.canonical.news.scss
+++ b/themes/custom/c2d_theme/sass/5.components/components.entity.node.canonical.news.scss
@@ -14,6 +14,10 @@
   .block-inner {
     max-width: 774px;
     margin-left: calc(1/8 * 100%);
+
+    h1.page-title {
+      text-align: left;
+    }
   }
 }
 
